tests/files/lexer_tests/should_fail/008.cmdr
// Illegal character in string (ascii 8)
var = ''